# P2PMsg

./: .gitattributes  .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/temp_p2p/: MainActivity.kt
assets/: config.example.json  config.json
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/logic/: database_helper.dart  node_manager.dart
lib/src/rust/: config.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  node.dart
lib/src/rust/api/: node.dart  simple.dart
lib/ui/screens/: home_screen.dart  settings_screen.dart
lib/ui/widgets/: chat_view.dart  peer_list_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build.rs
rust/core/: Cargo.toml
rust/core/src/: behaviour.rs  lib.rs  logger.rs  transport.rs
rust/node/: Cargo.toml
rust/node/src/: config.rs  frb_generated.rs  lib.rs  node.rs
rust/relay/: Cargo.toml
rust/relay/src/: main.rs
rust/src/: config.rs  frb_generated.rs  identity.rs  lib.rs  transport.rs
rust/src/api/: node.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_temp_p2p.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_temp_p2p.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
