[package]
name = "rust_lib_temp_p2p"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
libp2p = { version = "0.56.0", features = ["tokio", "gossipsub", "kad", "noise", "tcp", "yamux", "dns", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
