[package]
name = "p2p_msg_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }

# USAMOS LA VERSIÓN 0.53.2 QUE ES MÁS ESTABLE
libp2p = { version = "0.53.2", features = [
    "tokio", 
    "gossipsub", 
    "kad", 
    "noise", 
    "tcp", 
    "yamux", 
    "dns", 
    "macros", 
    "ping", 
    "identify",
    "mdns"
] }