[package]
name = "relay_server"
version = "0.1.0"
edition = "2021"

[dependencies]
p2p_core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
libp2p = { version = "0.53.2", features = [
    "tokio",
    "gossipsub",
    "kad",
    "noise",
    "tcp",
    "yamux",
    "dns",
    "macros",
    "ping",
    "identify",
    "mdns",
    "relay",
    "dcutr",
    "quic",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
